<resources>
    <string name="app_name">Login App</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="text_quote">In publishing and graphic design, Lorem\nipsum is a placeholder text</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">OR</string>
</resources>